# alpha-edge

./: .gitignore  engine_v1_inventory.txt  pyproject.toml
alpha-edge/: pyproject.toml
alpha-edge/src/optimization/: optimizer_engine.py  portfolio_health.py  portfolio_search.py
alpha-edge/src/report_engine/: report_engine.py  stats_engine.py
alpha-edge/src/scripts/: run_daily_report.py  run_optimization.py  run_portfolio_search.py  run_price_update.py  run_universe_update.py
alpha-edge/src/storage/: data_storage.py  preprocess_prices.py  price_update.py
data/: quantfury_trades.csv  recon_trades_fifo_vs_reported.csv  trade_20240513-9420a1b462430d49.json  trade_20240613-42d2a6e583cf407b.json
data/outputs/ingest_failures/: failures_2026-01-27.csv  failures_2026-01-28.csv  failures_2026-01-29.csv  failures_2026-01-30.csv  failures_2026-02-01.csv  failures_2026-02-02.csv  failures_2026-02-03.csv  failures_2026-02-04.csv  failures_2026-02-05.csv  failures_2026-02-06.csv  failures_2026-02-07.csv  failures_2026-02-08.csv  failures_2026-02-09.csv  failures_2026-02-10.csv  failures_2026-02-11.csv
data/outputs/universe_audit/: collisions_same_asset_id.csv  collisions_same_ticker.csv  collisions_same_yahoo_ticker.csv
data/universe/: asset_excluded.csv  ingest_force_refresh.csv  suggested_exclusions.csv  suggested_overrides.csv  triage_report.csv  universe.csv  universe_manual_additions.csv  universe_overrides.csv  universe_update_triage.csv
data/universe/.snapshots/: asset_excluded.prev.csv  universe_overrides.prev.csv
data/universe/.tmp/: universe_patch_out.csv
data/universe/snapshots/: asset_excluded.prev.csv  universe_overrides.prev.csv
examples/: account_operations_examples.sh  edit_trade_examples.sh  record_trade_examples.sh
src/alpha_edge/: paths.py
src/alpha_edge/backtest/: benchmark.py  config.py  data_view.py  engine.py  executor.py  goals.py  portfolio_search_adapter.py  sampling.py
src/alpha_edge/cli/: app.py
src/alpha_edge/config/: config.py
src/alpha_edge/core/: data_loader.py  market_store.py  schemas.py
src/alpha_edge/jobs/: run_daily_report.py  run_data_optimization.py  run_portfolio_evaluation.py  run_portfolio_search.py  run_quarantine_analysis.py  run_reports_backfill.py  run_score_weights_tuning.py  run_universe_triage.py  run_universe_update.py  run_update_score_caps.py  run_warehouse_backfill.py
src/alpha_edge/maintenance/: cleanup_partitions.py  dedupe_ohlcv_partitions_keep_one.py  migrate_local_history_to_s3.py  reset_ticker_history.py
src/alpha_edge/market/: asset_data_migration.py  build_corporate_actions.py  build_returns_wide_cache.py  compute_market_regime.py  download_market_data_from_s3.py  engine_market_loader.py  factor_engine.py  hmm_engine.py  ingest_market_data.py  mc_engine.py  regime_filter.py  regime_leverage.py  stats_engine.py
src/alpha_edge/operations/: apply_portfolio_choice.py  audit_crypto_trade_quantities.py  backfill_trades_asset_id.py  build_trade_repair_plan.py  bulk_import_trades.py  edit_trades_asset_id.py  rebuild_ledger.py  record_cashflow.py  record_dividend.py  record_trade.py  repair_all_trade_chains.py  repair_asset_history.py  trace_open_position.py
src/alpha_edge/portfolio/: alpha_report.py  execution_engine.py  goal_probs.py  optimizer_data.py  optimizer_engine.py  portfolio_health.py  portfolio_search.py  rebalance_engine.py  reinvest_engine.py  report_engine.py  stability_energy.py  (+1 more)
(+14 files in other folders)
