[project]
name = "alpha-edge"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Daniel Torossian",email = "alejandro.torossian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "boto3 (>=1.42.9,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]

[tool.poetry]
packages = [{include = "alpha_edge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
